# riskybear-firmware

ESP32C6_Controller/spider_main/main/: CMakeLists.txt  encoder.c  encoder.h  i2c.c  main.c  motor.c  motor.h  switch.c  switch.h
ESP32C6_Controller/spider_sub/components/rotary_encoder/: CMakeLists.txt
ESP32C6_Controller/spider_sub/main/: CMakeLists.txt  encoder.c  encoder.h  main.c  motor.c  motor.h
FPGA-ESP32_Controller/main/: CMakeLists.txt  controller.c  controller.h  home.c  home.h  joints.c  joints.h  main.c
FPGA-ESP32_Controller/main/libraries/: UART_TSI.c  UART_TSI.h  i2c.c  i2c.h  switch.c  switch.h
bringup testing/testfile/: sdkconfig  sdkconfig.old
